# annotation_board

./: .gitignore  README.md  docker-compose.yml
eva_annotation_board_backend/: Dockerfile.prod  pyproject.toml  readme.md
eva_annotation_board_backend/annotations/: admin.py  apps.py  models.py  serializers.py
eva_annotation_board_backend/annotations/migrations/: 0001_initial.py  0002_initial.py
eva_annotation_board_backend/clips/: admin.py  models.py  serializers.py  urls.py  views.py
eva_annotation_board_backend/clips/migrations/: 0001_initial.py  0002_clip_type.py  0003_alter_clip_type.py
eva_annotation_board_backend/common/: models.py
eva_annotation_board_backend/config/: settings.py  urls.py
eva_annotation_board_backend/editvideos/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
eva_annotation_board_backend/editvideos/migrations/: 0001_initial.py  0002_initial.py
eva_annotation_board_backend/toa_key/: admin.py  apps.py  models.py
eva_annotation_board_backend/toa_key/migrations/: 0001_initial.py
eva_annotation_board_backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
eva_annotation_board_backend/users/migrations/: 0001_initial.py
eva_annotation_board_backend/videos/: admin.py  models.py  serializers.py  urls.py  views.py
eva_annotation_board_backend/videos/migrations/: 0001_initial.py  0002_video_type.py  0003_video_duration.py  0004_alter_video_author.py  0005_alter_video_user.py
eva_annotation_board_client/: .eslintrc.json  next.config.mjs  package-lock.json  package.json
(+20 files in other folders)
